<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/recycler"
        xmlns:android="http://schemas.android.com/apk/res/android" />

