<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/menu_item_quit"
            android:enabled="true"
            android:icon="@android:drawable/ic_menu_revert"
            android:title="@string/bottom_nav_3"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/menu_item_settings"
            android:enabled="true"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/bottom_nav_2"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/menu_item_contact"
            android:enabled="true"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/bottom_nav_1"
            app:showAsAction="ifRoom" />
</menu>