<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/rootFragmentPresentation">

        <com.systemathic.flagsquizz.ui.CustomTextView
                android:id="@+id/tvPresentation"
                style="@style/CustomTheme.SubTitle"
                android:text="@string/parameters"/>

        <ImageView android:layout_width="@dimen/logo_size"
                android:layout_height="@dimen/logo_size"
                android:layout_marginTop="@dimen/margin_elements2"
                android:layout_gravity="center"
                android:id="@+id/imagePresentation"
                android:contentDescription="@string/descr_user_img"
                android:src="@drawable/user_no_image"/>

        <TextView
                style="@style/CustomTheme.SmallText"
                android:layout_marginTop="@dimen/margin_elements2"
                android:layout_marginBottom="@dimen/margin_elements2"
                android:id="@+id/tvInfosPresentation"/>

</LinearLayout>
